# shorts-whisperer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/shorts_whisperer/: __init__.py  cli.py  generator.py  transcriber.py
tests/: test_basic.py  test_cli.py  test_generator.py  test_transcriber.py
